fix file exists check

we need to pass QFile::exists what toLocalFile does,
not just path

that should work on all platforms, like Windows

BUG: 495839